--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
             margin-top: 10px;
         }
         input, button {
-            width: 500px;
+            width: 700px;
             padding: 10px;
             font-size: 16px;
             margin-top: 5px;
@@ -77,7 +77,7 @@
 </head>
 <body>
 
-    <h1>Equation Solver</h1>
+    <h1>SolveSim</h1>
 
     <p>This is java implementatino of algorithm described in Similarity-Based Constraint Solving Modulo Commutativity: A Unified Framework</p>
 
@@ -100,19 +100,21 @@
     <div class="rules">
         <h2> Input Syntax: </h2>
         <ul>
-            <li>A lower case character followed by "_o" is an ordered function symbol. e.g f_u, g_u</li>
-            <li>A lower case character followed by "_u" is an unordered function symbol. e.g f_o, g_o</li>
+            <li>A lower case character followed by "_o" is an ordered function symbol. e.g f_o, g_o</li>
+            <li>A lower case character followed by "_u" is an unordered function symbol. e.g f_u, g_u</li>
             <li>An uppercase alphabet character without "_o" or "_u" is a variable. e.g X, Y, M</li>
-            <li>An \/ must be used for OR and /\ for AND</li>
-            <li>Equations must be in Disjunctive Normal Form (DNF). Brackets must be used for each conjunction.</li>
+            <li>Constraints are entered in the form <strong>Term ~= cut_value Term</strong>, where cut_value is a number between 0 and 1. e.g X ~= 0.3 f_o(Y)</li>
+            <li>Conjunction are entered in the form <strong>(Constraint /\ Constraint ...)</strong> e.g (X ~= 0.3 f_o(Y) /\ f_o(G) ~= 0.5 g_o(M))</li>
+            <li>Disjunction is entered in the form <strong>Conjunction \/ Conjunction</strong></li>
+            <li>Equations must be in Disjunctive Normal Form (DNF).</li>
         </ul>
     </div>
     <div class="rules">
         <h2> Some Example: </h2>
         <p>click on them to try</p>
         <ul>
-            <li onclick="fillWithExamples()" >f_u(x, fo(x, b), y, ho(x, y)) ~= g_u(g_o(a, y), b). cut_value = 0.4. Relations: (f_u, g_u, 0.6), (f_o, g_o, 0.5), (h_o, g_o, 0.3)</li>
-            <li onclick="fillWithExamples2()" >(f_u(X, Y) ~= 0.4 g_u(a_o, b_o)). cut_value = 0.4. Relations: (f_o, g_o, 0.5), (h_o, g_o, 0.3)</li>
+            <li onclick="fillWithExamples()" >f_u(x, fo(x, b), y, ho(x, y)) ~= 0.4 g_u(g_o(a, y), b). Relations: (f_u, g_u, 0.6), (f_o, g_o, 0.5), (h_o, g_o, 0.3)</li>
+            <li onclick="fillWithExamples2()" >(f_u(X, Y) ~= 0.4 g_u(a_o, b_o)). Relations: (f_o, g_o, 0.5), (h_o, g_o, 0.3)</li>
         </ul>
     </div>
 
